<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sharemenu"
        android:icon="@drawable/ic_share"
        android:orderInCategory="1"
        android:title="@string/Sharebutton"
        android:visible="true"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/renamemenu"
        android:icon="@drawable/renamepic"
        android:orderInCategory="2"
        android:title="@string/Renamebutton"
        android:visible="true"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/deletemenu"
        android:icon="@drawable/deletepic"
        android:orderInCategory="3"
        android:title="@string/Deletebutton"
        android:visible="true"
        android:showAsAction="always"
        tools:ignore="AppCompatResource"  />

    <item
        android:id="@+id/action_encrypt"
        android:orderInCategory="4"
        android:title="@string/Encryptit"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_decrypt"
        android:orderInCategory="5"
        android:title="@string/Decryptit"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/rateIt"
        android:orderInCategory="6"
        android:title="@string/rate"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
</menu>