<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_outer_padding">

    <TextView
        android:id="@+id/securityDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/Encryptit"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enterpass" />
    <EditText
        android:id="@+id/encryptPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ConfirmPass" />
    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text" />

</LinearLayout>