<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utils.CameraActivity">

    <com.camerakit.CameraKitView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:camera_facing="back"
        app:camera_flash="auto"
        app:camera_focus="continuous" />

    <ImageButton
        android:id="@+id/reverseFlash"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_click_gray"
        android:contentDescription="@string/switch_flash_mode"
        android:src="@drawable/ic_action_flash_reverse"
        android:tint="@color/colorPrimaryDark" />

    <ImageButton
        android:id="@+id/reverseCamera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_click_gray"
        android:contentDescription="@string/change_camera"
        android:src="@drawable/ic_action_camera_reverse"
        android:tint="@color/colorPrimaryDark" />

    <ImageButton
        android:id="@+id/clickImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_click_gray"
        android:contentDescription="@string/Capture_Image"
        android:src="@drawable/ic_action_camera2"
        android:tint="@color/colorPrimaryDark" />
</RelativeLayout>